testdata/baselines/reference/submodule/conformance/lateBoundAssignmentDeclarationSupport1.errors.txt
usage.js(1,19): error TS7016: Could not find a declaration file for module './lateBoundAssignmentDeclarationSupport1.js'. 'lateBoundAssignmentDeclarationSupport1.js' implicitly has an 'any' type.


==== usage.js (1 errors) ====
    const x = require("./lateBoundAssignmentDeclarationSupport1.js");
                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7016: Could not find a declaration file for module './lateBoundAssignmentDeclarationSupport1.js'. 'lateBoundAssignmentDeclarationSupport1.js' implicitly has an 'any' type.
    const y = x["my-fake-sym"];
    const z = x[x.S];
    
==== lateBoundAssignmentDeclarationSupport1.js (0 errors) ====
    // currently unsupported
    const _sym = Symbol();
    const _str = "my-fake-sym";
    
    exports[_sym] = "ok";
    exports[_str] = "ok";
    exports.S = _sym;